Match-id-29e35056afbcded43d170914bcfc16eca7314f0b

--- a/src/AppPlugins/common/framework/src/job/CMakeLists.txt
+++ b/src/AppPlugins/common/framework/src/job/CMakeLists.txt
@@ -13,6 +13,10 @@ target_include_directories(basic_job
     PUBLIC
     ${INC_PATH}/job
     ${INC_PATH}/common
+    ${INC_PATH}/lib_mgr
+    ${INC_PATH}/rpc
+    ${INC_PATH}/rpc/certificateservice
+    ${INC_PATH}/client
     ${MODULE_PATH}
 )
 
