Match-id-4a9383a6f5c3e3a4d301288d5501e223c36fdf1f

--- a/src/AppPlugins/common/framework/src/CMakeLists.txt
+++ b/src/AppPlugins/common/framework/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.14)
 project(Plugin_Framework)
 # 查看目标库是否存在
 if(TARGET safe_cmplib)
@@ -16,7 +16,7 @@ SET(OPEN_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../Module/third_open_src)
 SET(AGENT_SDK_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../dep/agent_sdk)
 
 # 打开编译告警
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-unused-function")
 if(DTFUZZ)
 MESSAGE(STATUS "******************DTFUZZ is on*************")
 SET(SECODE_FUZZ_INCLUDE_PATH ${NAS_OPENSRC_PATH}/secodefuzz_rel/include)
@@ -107,7 +107,9 @@ add_subdirectory(thrift_interface)
 add_subdirectory(client)
 add_subdirectory(job)
 add_subdirectory(job_mgr)
+add_subdirectory(lib_mgr)
 add_subdirectory(rpc)
+add_subdirectory(rpc_server)
 add_subdirectory(server)
 add_subdirectory(startup)
 add_subdirectory(utils)
