Match-id-66c5ca4273b2d38387c7745ae25eef60a322909c

--- a/src/AppPlugins/common/framework/src/job/CMakeLists.txt
+++ b/src/AppPlugins/common/framework/src/job/CMakeLists.txt
@@ -23,4 +23,6 @@ target_include_directories(basic_job
 target_link_libraries(basic_job
     PUBLIC
     thrift_interface
+    thrift_client
+    lib_mgr_obj
 )
