Match-id-ce222d7d74f4451dd239c8d4ae8d8e95f5f840a0

--- a/src/AppPlugins/common/framework/src/job_mgr/CMakeLists.txt
+++ b/src/AppPlugins/common/framework/src/job_mgr/CMakeLists.txt
@@ -27,5 +27,5 @@ target_include_directories(job_mgr_obj
 target_link_libraries(job_mgr_obj
     PUBLIC
     basic_job
-    mgr_obj
+    lib_mgr_obj
 )
