--- a/src/AppPlugins/file/src/CMakeLists.txt
+++ b/src/AppPlugins/file/src/CMakeLists.txt
@@ -3,17 +3,17 @@ project(FilePlugin)
 
 add_definitions(-DBOOST_ASIO_DISABLE_STD_ALIGNED_ALLOC)
 # 定义工程需要的变量
-SET(PLUGIN_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../..)
-SET(PLUGIN_FRAMEWORK_PATH ${PLUGIN_ROOT_PATH}/framework)
+SET(PLUGIN_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../..)
+SET(PLUGIN_FRAMEWORK_PATH ${PLUGIN_ROOT_PATH}/common/framework)
 include(${PLUGIN_FRAMEWORK_PATH}/build/cmake/global.cmake)
-
-SET(PLUGIN_SCANNER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../../FS_Scanner)
-SET(PLUGIN_BACKUP_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../../FS_Backup)
+ 
+SET(PLUGIN_SCANNER_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../common/FS_Scanner)
+SET(PLUGIN_BACKUP_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../common/FS_Backup)
 SET(PLUGIN_COMMON_PATH ${CMAKE_CURRENT_SOURCE_DIR}/common)
 SET(PLUGIN_SRC_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 SET(PLUGIN_FRAMEWORK_LIB_PATH ${PLUGIN_FRAMEWORK_PATH}/lib)
-
-SET(MODULE_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../../Module)
+ 
+SET(MODULE_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../common/Module)
 SET(OPEN_SRC_PATH ${MODULE_ROOT_PATH}/third_open_src)
 
 SET(DME_LIB_PATH ${PLUGIN_FRAMEWORK_LIB_PATH})
