Match-id-c7de09e24b6f0d2ec4709e8b4190cf2ddf2ca550

--- a/src/AppPlugins/file/src/common/host/CMakeLists.txt
+++ b/src/AppPlugins/file/src/common/host/CMakeLists.txt
@@ -33,7 +33,7 @@ target_include_directories(host_obj
     ${MODULE_ROOT_PATH}/src/libnfs_ctx
     ${MODULE_ROOT_PATH}/src/threadpool
     ${MODULE_ROOT_PATH}/src/libsmb_ctx
-    ${PLUGIN_ROOT_PATH}
+    ${PLUGIN_ROOT_PATH}/common
     ${OPENSRC_THRIFT_INC_PATH}
     ${OPEN_SRC_PATH}/boost_rel/include
     ${MODULE_PLATFORM_PATH}/SecureCLib_rel/include
