--- a/src/AppPlugins/file/src/file_service/host_index/CMakeLists.txt
+++ b/src/AppPlugins/file/src/file_service/host_index/CMakeLists.txt
@@ -3,9 +3,6 @@ add_library(host_index_obj
     ${CMAKE_CURRENT_SOURCE_DIR}/HostIndex.cpp
 )
 
-SET(PLUGIN_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../Module)
-MESSAGE("MODULE_PATH : ${PLUGIN_MODULE_PATH}")
-
 target_include_directories(host_index_obj
     PRIVATE
     ${PLUGIN_FRAMEWORK_PATH}/inc/job/
@@ -19,12 +16,12 @@ target_include_directories(host_index_obj
     ${PLUGIN_SRC_PATH}
     ${PLUGIN_SRC_PATH}/common
     ${PLUGIN_SRC_PATH}/utils
-    ${PLUGIN_MODULE_PATH}/third_open_src/thrift_rel/include
-    ${PLUGIN_MODULE_PATH}/third_open_src/boost_rel/include
-    ${PLUGIN_MODULE_PATH}/src
-    ${PLUGIN_MODULE_PATH}/src/libsmb_ctx
+    ${OPEN_SRC_PATH}/thrift_rel/include
+    ${OPEN_SRC_PATH}/boost_rel/include
+    ${MODULE_ROOT_PATH}/src
+    ${MODULE_ROOT_PATH}/src/libsmb_ctx
     ${PLUGIN_SCANNER_PATH}/interface
-    ${PLUGIN_ROOT_PATH}
+    ${PLUGIN_ROOT_PATH}/common
     ${MODULE_PLATFORM_PATH}/SecureCLib_rel/include
     ${OPEN_SRC_PATH}/jsoncpp_rel/include
     ${PLUGIN_SCANNER_PATH}/localhost_src/common
