Match-id-1b035b239a7b8fffc90296a8e4a6f2bf1e7187ad

--- a/src/AppPlugins/common/FS_Backup/src/CMakeLists.txt
+++ b/src/AppPlugins/common/FS_Backup/src/CMakeLists.txt
@@ -2,3 +2,10 @@ add_subdirectory(common)
 add_subdirectory(engines)
 add_subdirectory(model)
 add_subdirectory(service)
+
+# UNIX不支持卷备份
+if (VOLUME AND "${CMAKE_HOST_SYSTEM_NAME}" STREQUAL "Linux")
+    message("add subdirectory volume")
+    add_subdirectory(volume)
+    add_subdirectory(bare_metal_recovery)
+endif ()
