--- a/src/AppPlugins/common/FS_Backup/src/engines/CMakeLists.txt
+++ b/src/AppPlugins/common/FS_Backup/src/engines/CMakeLists.txt
@@ -5,6 +5,8 @@ if (NAS)
     add_subdirectory(libaio)
     add_subdirectory(libnfs)
     add_subdirectory(libsmb)
+
+    add_subdirectory(nfs_anti_ransomware)
 endif()
 
 if (OBS)
