Match-id-c21688d58276544d0cd1a4ee7d71f7e9a081ac15

--- a/src/AppPlugins/file/src/file_service/host_index/CMakeLists.txt
+++ b/src/AppPlugins/file/src/file_service/host_index/CMakeLists.txt
@@ -24,14 +24,14 @@ target_include_directories(host_index_obj
     ${PLUGIN_ROOT_PATH}/common
     ${MODULE_PLATFORM_PATH}/SecureCLib_rel/include
     ${OPEN_SRC_PATH}/jsoncpp_rel/include
-    ${PLUGIN_SCANNER_PATH}/localhost_src/common
-    ${PLUGIN_SCANNER_PATH}/localhost_src/checkpoint
-    ${PLUGIN_SCANNER_PATH}/localhost_src/filter
-    ${PLUGIN_SCANNER_PATH}/localhost_src/interface
-    ${PLUGIN_SCANNER_PATH}/localhost_src/model
-    ${PLUGIN_SCANNER_PATH}/localhost_src/service
-    ${PLUGIN_SCANNER_PATH}/localhost_src/statistics
-    ${PLUGIN_SCANNER_PATH}/localhost_src/utils
+    ${PLUGIN_SCANNER_PATH}/include/common
+    ${PLUGIN_SCANNER_PATH}/include/checkpoint
+    ${PLUGIN_SCANNER_PATH}/include/filter
+    ${PLUGIN_SCANNER_PATH}/include/interface
+    ${PLUGIN_SCANNER_PATH}/include/model
+    ${PLUGIN_SCANNER_PATH}/include/service
+    ${PLUGIN_SCANNER_PATH}/include/statistics
+    ${PLUGIN_SCANNER_PATH}/include/utils
 )
 
 target_link_libraries(host_index_obj
