--- a/src/AppPlugins/virtualization/src/protect_engines/kubernetes/CMakeLists.txt
+++ b/src/AppPlugins/virtualization/src/protect_engines/kubernetes/CMakeLists.txt
@@ -31,8 +31,8 @@ if(KUBERNETES_TEST)
             ${KUBERNETES_TEST_SRCS})
     include("${TEST_DIR}/conf/comp.cmake")
     set(K8S_FRAMEWORK_LIBS
-            ${PROTECT_ROOT_DIR}/framework/lib
-            ${PROTECT_ROOT_DIR}/framework/lib/agent_sdk
+            ${PROTECT_ROOT_DIR}/common/framework/lib
+            ${PROTECT_ROOT_DIR}/common/framework/lib/agent_sdk
             ${MODULE_OPEN_SRC_PATH}/lz4_rel/lib
             ${MODULE_OPEN_SRC_PATH}/boost_rel/lib
             ${MODULE_OPEN_SRC_PATH}/jsoncpp_rel/libs
@@ -47,12 +47,12 @@ if(KUBERNETES_TEST)
             )
 
     set(K8S_FRAMEWORK_INC
-            ${PROTECT_ROOT_DIR}/framework/inc
-            ${PROTECT_ROOT_DIR}/framework/inc/common
-            ${PROTECT_ROOT_DIR}/framework/inc/client
-            ${PROTECT_ROOT_DIR}/framework/inc/rpc
-            ${PROTECT_ROOT_DIR}/framework/inc/rpc/certificateservice/
-            ${PROTECT_ROOT_DIR}/framework/inc/thrift_interface
+            ${PROTECT_ROOT_DIR}/common/framework/inc
+            ${PROTECT_ROOT_DIR}/common/framework/inc/common
+            ${PROTECT_ROOT_DIR}/common/framework/inc/client
+            ${PROTECT_ROOT_DIR}/common/framework/inc/rpc
+            ${PROTECT_ROOT_DIR}/common/framework/inc/rpc/certificateservice/
+            ${PROTECT_ROOT_DIR}/common/framework/inc/thrift_interface
             ${PROTECT_ROOT_DIR}/plugins/virtualization/test/llt_stub/
 
             ${MODULE_ROOT_PATH}/src
