--- a/src/AppPlugins/virtualization/test_win/CMakeLists.txt
+++ b/src/AppPlugins/virtualization/test_win/CMakeLists.txt
@@ -21,7 +21,7 @@ set(CMAKE_EXE_LINKER_FLAGS "/NODEFAULTLIB:LIBCMT /NODEFAULTLIB:libcrpt.lib /NODE
 set(VIRT_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../src ${CMAKE_CURRENT_SOURCE_DIR})
 set(PROTECT_ROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../../..)
 set(MODULE_ROOT_PATH ${PROTECT_ROOT_DIR}/Module)
-set(FRAMEWORK_ROOT_PATH ${PROTECT_ROOT_DIR}/framework)
+set(FRAMEWORK_ROOT_PATH ${PROTECT_ROOT_DIR}/common/framework)
 set(MODULE_OPEN_SRC_PATH ${MODULE_ROOT_PATH}/open_src)
 set(MODULE_PLATFORM_PATH ${MODULE_ROOT_PATH}/platform)
 set(DT_UTILS_PATH ${MODULE_ROOT_PATH}/dt_utils)
@@ -101,15 +101,15 @@ message("-------------VIRT_INC_DIR: ${VIRT_INC_DIR}")
 
 
 set(PLUGIN_FRAMEWORK_INC
-    ${PROTECT_ROOT_DIR}/framework/inc
-    ${PROTECT_ROOT_DIR}/framework/inc/common
-    ${PROTECT_ROOT_DIR}/framework/inc/client
-    ${PROTECT_ROOT_DIR}/framework/inc/server
-    ${PROTECT_ROOT_DIR}/framework/inc/rpc
-    ${PROTECT_ROOT_DIR}/framework/inc/rpc/certificateservice/
-    ${PROTECT_ROOT_DIR}/framework/inc/thrift_interface
-    ${PROTECT_ROOT_DIR}/framework/dep/agent_sdk/include/message/archivestream
-    ${PROTECT_ROOT_DIR}/framework/dep/agent_sdk/include
+    ${PROTECT_ROOT_DIR}/common/framework/inc
+    ${PROTECT_ROOT_DIR}/common/framework/inc/common
+    ${PROTECT_ROOT_DIR}/common/framework/inc/client
+    ${PROTECT_ROOT_DIR}/common/framework/inc/server
+    ${PROTECT_ROOT_DIR}/common/framework/inc/rpc
+    ${PROTECT_ROOT_DIR}/common/framework/inc/rpc/certificateservice/
+    ${PROTECT_ROOT_DIR}/common/framework/inc/thrift_interface
+    ${PROTECT_ROOT_DIR}/common/framework/dep/agent_sdk/include/message/archivestream
+    ${PROTECT_ROOT_DIR}/common/framework/dep/agent_sdk/include
 )
 set(PLUGIN_MODULE_INC
     ${MODULE_ROOT_PATH}/src
