Match-id-d11624c869ee43556b5f971e96146eb1ba70dfbd

--- a/src/AppPlugins/virtualization/src/volume_handlers/cloud_volume/CMakeLists.txt
+++ b/src/AppPlugins/virtualization/src/volume_handlers/cloud_volume/CMakeLists.txt
@@ -1,12 +1,14 @@
 aux_source_directory(. CLOUD_VOLUME_SRCS)
 aux_source_directory(cinder_volume CINDER_VOLUME_SRCS)
 aux_source_directory(cnware_volume CNWARE_VOLUME_SRCS)
+aux_source_directory(nutanix_volume NUTANIX_VOLUME_SRCS)
 
 add_library(cloud_volume_obj
         OBJECT
         ${CLOUD_VOLUME_SRCS}
         ${CINDER_VOLUME_SRCS}
         ${CNWARE_VOLUME_SRCS}
+        ${NUTANIX_VOLUME_SRCS}
         )
 
 target_link_libraries(cloud_volume_obj
