--- a/src/ProtectManager/component/PM_GUI/src/service/console/angular.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/angular.json
@@ -24,7 +24,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref": "",
+            "baseHref": "/console/",
             "outputPath": "dist/pm-gui",
             "index": "src/index.html",
             "main": "src/main.ts",
