build: 修改angular.json中的outputPath路径为dist/pm-gui

--- a/src/ProtectManager/component/PM_GUI/src/service/console/angular.json
+++ b/src/ProtectManager/component/PM_GUI/src/service/console/angular.json
@@ -25,7 +25,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "baseHref": "/console/",
-            "outputPath": "console",
+            "outputPath": "dist/pm-gui",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
